[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["JokerSe <artuhovse@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.0"
asgiref = "3.6.0"
django-debug-toolbar = "4.0.0"
django-filter = "22.1"
djangorestframework = "3.14"
pytz = "^2024.1"
sqlparse = "0.4.2"
gunicorn = "^22.0.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
